--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ Week3/Homework/lm.css
 Week3/Homework/LM.html
 Week3/cbc14instructor/
 Week3/CBC14wk3/
+Week4/Homework4/Todo project/todo.js
+Week4/Homework4/HTML/index.html
+Week4/Homework4/Todo project/todo.js
