--- a/Week8/NodeDB/package.json
+++ b/Week8/NodeDB/package.json
@@ -5,11 +5,23 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Figgg",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.0",
     "mysql": "^2.18.1"
   },
-  "description": ""
+  "description": "fruit table",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Fig369/Cbc14.git#main"
+  },
+  "keywords": [
+    "fruit"
+  ],
+  "bugs": {
+    "url": "https://github.com/Fig369/Cbc14/issues"
+  },
+  "homepage": "https://github.com/Fig369/Cbc14/tree/main#readme"
 }
